# polytesting-bot

./: .env.example  .gitignore  README.md  backtest_prob.py  polybot_web.py  requirements.txt  run_web.sh  run_worker.sh
execution-worker/: Cargo.toml
execution-worker/src/: main.rs
webui/: app.js  index.html  styles.css
