[package]
name = "ptb-execution-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = ["signer-local", "signers"] }
anyhow = "1.0.102"
axum = { version = "0.8.6", features = ["json"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
polymarket-client-sdk = { path = "/home/moree/polymarket-official/rs-clob-client", features = ["clob", "ws", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
